--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   padding: 0;
+  font-size: 1.2rem;
   font-family: sans-serif;
   background: linear-gradient(89deg, #ff5edf 0%, #04c8de 100%);
 }
