--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 2rem;
-  font-size: 1.2rem;
+  margin: 0 2rem;
 }
 
 .detect-form {
@@ -61,7 +60,6 @@
 }
 
 .detect-input {
-  /* padding: 0.4rem; */
   flex-grow: 3;
 }
 
