--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,6 @@ body {
   margin: 0;
   padding: 0;
   font-size: 1.2rem;
-  font-family: sans-serif;
+  font-family: "Courier New", Courier, monospace;
   background: linear-gradient(89deg, #ff5edf 0%, #04c8de 100%);
 }
