--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,7 @@ body {
   font-family: "Courier New", Courier, monospace;
   background: linear-gradient(89deg, #ff5edf 0%, #04c8de 100%);
 }
+
+button {
+  cursor: pointer;
+}
