--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  position: relative;
+  width: 100%;
   margin: 0;
   padding: 0;
   font-size: 1.2rem;
@@ -14,4 +16,19 @@ body {
 
 button {
   cursor: pointer;
+}
+
+.app {
+  height: 100vh;
+  position: relative;
+  z-index: 1;
+}
+
+.particles {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
 }
